# uncrustify

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.in  make_punctuators.sh  make_token_names.sh  update-default-cfg.sh
documentation/htdocs/: config.txt  default.cfg
documentation/htdocs/examples/: c-1.in.c  c-1.out.c
etc/: amxmodx.cfg  ben.cfg  defaults.cfg  freebsd.cfg  klaus.cfg  sun.cfg
man/: Makefile.am  Makefile.in
src/: ChunkStack.cpp  ChunkStack.h  Makefile.am  Makefile.in  align.cpp  align_stack.cpp  align_stack.h  args.cpp  args.h  backup.cpp  base_types.h  brace_cleanup.cpp  braces.cpp  char_table.h  chunk_list.cpp  chunk_list.h  combine.cpp  config.h  config.h.in  defines.cpp  detect.cpp  indent.cpp  keywords.cpp  lang_pawn.cpp  logger.cpp  logmask.cpp  logmask.h  newlines.cpp  options.cpp  options.h  output.cpp  parse_frame.cpp  prototypes.h  punctuators.cpp  punctuators.h  reflow_text.cpp  reflow_text.h  reflow_text_box.cpp  reflow_text_dbg.cpp  reflow_text_internal.h  (+16 more)
tests/: c.test  cpp.test  difftest.sh  ecma.test  objective-c.test  php.test  run_tests.py
tests/config/: 1liner-no-split.cfg  1liner-split.cfg  al.cfg  align-type-wrap-func-data-1.cfg  amxmodx.cfg  avalon3.cfg  avalon4.cfg  ben.cfg  ben2.cfg  bool-pos-sol-break.cfg  bool-pos-sol-force.cfg  bool-pos-sol.cfg  brace-remove-2.cfg  brace-remove-all.cfg  cast-sp-a.cfg  cast-sp-r.cfg  cast-type.cfg  cgal.cfg  clark.cfg  cpp_to_c-1.cfg  cpp_to_c-2.cfg  cpp_to_c-3.cfg  custom_types_ssl.cfg  freebsd.cfg  func_call_user.cfg  ger-full-cmt-reflow.cfg  ger.cfg  indent_braces_no.cfg  indent_ctor_init.cfg  indent_var_def.cfg  kw_subst3.cfg  lambda1.cfg  mod-paren.cfg  mod-paren2.cfg  mod_case_brace_add.cfg  mod_case_brace_rm.cfg  mod_move_case_brace.cfg  nSolve.cfg  nepenthes.cfg  newline_after_endif.cfg  (+17 more)
tests/input/c/: cmt-not-a-boxed-cmt.c  func_param.c  nl-cont.c  nl-cont2.c  pp-indent-define.c
tests/input/cpp/: __hook.cpp  __if_exists.cpp  __leave.cpp  __noop.cpp  __raise.cpp  __single_inheritance.cpp  __unaligned.cpp  comidl___event.cpp  comidl___hook.cpp  comidl___hook.h  comidl___uuidof.cpp  dotnet___delegate.cpp  dotnet___event_1.cpp  dotnet___event_2.cpp  dotnet___event_3.cpp  dotnet___gc_1.cpp  dotnet___identifier.cpp  dotnet___property.cpp  dotnet___sealed.cpp  dotnet___try_cast.cpp  dotnet___value.cpp  dotnet_boxed.cpp  dotnet_for_each.cpp  dotnet_generic_1.cpp  dotnet_generic_where.cpp  dotnet_initonly.cpp  dotnet_literal.cpp  dotnet_nullptr.cpp  dotnet_nullptr_2.cpp  dotnet_nullptr_3.cpp  dotnet_nullptr_4.cpp  dotnet_safe_cast.cpp  force_inline.cpp  msvc___assume.cpp  msvc___based.cpp
tests/input/ecma/: FileManager.js  Gallery.js  use-strict.js
tests/input/php/: FileManagerWithAliasSupport.php
tests/output/c/: 00012-braces.c  00050-brace-remove.c  00051-brace-remove.c  00052-brace-remove2.c  00203-case.c  00511-bool-pos.c  00513-bool-pos.c  00616-pp-if-indent.c  00617-pp-if-indent.c  02100-i2c-core.c  02102-indent.cpp  02302-nl-cont.c  02303-nl-cont2.c  02405-pp-indent-define.c  02406-pp-indent-define.c  02407-pp-indent-define.c  02461-freebsd.c  21061-freebsd.c  99053-brace.c  99901-cmt-not-a-boxed-cmt.c  99902-cmt-not-a-boxed-cmt.c  99903-freebsd.c  99904-pp_concat_asn1.h
tests/output/cpp/: 30013-sim.h  30253-align_left_shift.cpp  30254-align_left_shift2.cpp  30256-func_call.cpp  30750-lambda.cpp  30751-lambda.cpp  30817-cmt-cpp-cont.cpp  31950-comidl___event.cpp  31951-comidl___hook.cpp  31952-comidl___hook.h  31953-comidl___uuidof.cpp  31960-dotnet_boxed.cpp  31961-dotnet_for_each.cpp  31962-dotnet_generic_1.cpp  31963-dotnet_generic_where.cpp  31964-dotnet_initonly.cpp  31965-dotnet_literal.cpp  31966-dotnet_nullptr.cpp  31967-dotnet_nullptr_2.cpp  31968-dotnet_nullptr_3.cpp  31969-dotnet_nullptr_4.cpp  31970-dotnet_safe_cast.cpp  31971-dotnet___delegate.cpp  31972-dotnet___event_1.cpp  31973-dotnet___event_2.cpp  31974-dotnet___event_3.cpp  31975-dotnet___gc_1.cpp  31976-dotnet___identifier.cpp  31977-dotnet___property.cpp  31978-dotnet___sealed.cpp  31979-dotnet___try_cast.cpp  31980-dotnet___value.cpp  31990-msvc___assume.cpp  31991-msvc___based.cpp  31992-__hook.cpp  31993-__if_exists.cpp  31994-__leave.cpp  31995-__noop.cpp  31996-__raise.cpp  31997-__single_inheritance.cpp  (+2 more)
tests/output/ecma/: 90001-use-strict.js  90002-use-strict.js  90003-FileManager.js  90004-FileManager.TinyMCE.js  90005-Gallery.js  90006-NoFlash.Uploader.js  90007-Uploader.js  90008-mootools-core.js  90009-mootools-more.js
tests/output/oc/: 50007-misc.m  50050-real_world_file.m
tests/output/php/: A0002-Image.class.php  A0010-Tooling.php  A0011-FileManager.php
win32/: Uncrustify_Win32_2003.sln  Uncrustify_Win32_2003.vcproj  Uncrustify_Win32_2005.vcproj  Uncrustify_Win32_2008.sln  Uncrustify_Win32_2008.vcproj  Uncrustify_Win32_2010.sln  Uncrustify_Win32_2010.vcxproj  Uncrustify_Win32_2010.vcxproj.filters  windows_compat.h
